[gd_scene load_steps=7 format=3 uid="uid://daumqxv4g2jxy"]

[ext_resource type="Script" uid="uid://dcp4881wiphnj" path="res://scenes/entities/tracks/track_part_1.gd" id="1_me4sk"]
[ext_resource type="PackedScene" uid="uid://b7p8cmat2ofin" path="res://scenes/entities/tracks/taylor_test/track_art.tscn" id="2_viluo"]
[ext_resource type="StyleBox" uid="uid://b747xg5ip3eec" path="res://scenes/entities/tracks/taylor_test/styles/track_3_mask.tres" id="3_7ui7i"]
[ext_resource type="Texture2D" uid="uid://b7drtkvp6a06f" path="res://scenes/entities/tracks/taylor_test/images/CoasterTrack3.png" id="3_flma3"]

[sub_resource type="Curve2D" id="Curve2D_q0nch"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 64, 40, 0, 0, 0, 0, 104, 64, 0, 0, 0, 0, 128, 72, -23.6499, 18.7414, 23.6499, -18.7414, 192, 64, -6.24714, 24.5423, 6.24714, -24.5423, 224, 8, 14.2792, 15.1716, -14.2792, -15.1716, 208, -56, 36.5904, 0, -36.5904, 0, 136, -88, 4.46224, -26.7735, -4.46224, 26.7735, 64, -32, -17.4028, -26.7735, 17.4028, 26.7735, 80, 56, 0, 0, 0, 0, 144, 104, -26.7735, -24.9886, 26.7735, 24.9886, 208, 136, 0, 0, 0, 0, 256, 184)
}
point_count = 13

[sub_resource type="CircleShape2D" id="CircleShape2D_oxk6s"]
radius = 14.0357

[node name="TrackPart" type="Node2D"]
script = ExtResource("1_me4sk")
track_speed = 1000.0

[node name="grab_detect" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.454902)
offset_top = -320.0
offset_right = 256.0
focus_mode = 0
flat = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2(0, -192)
points = PackedVector2Array(0, 0, 96, 72, 184, 80, 224, 24, 208, -48, 136, -80, 96, -64, 64, -32, 64, 40, 112, 96, 192, 136, 256, 192)
default_color = Color(0.410156, 0.410156, 0.410156, 1)

[node name="coaster_path" type="Path2D" parent="."]
position = Vector2(0, -184)
curve = SubResource("Curve2D_q0nch")

[node name="start" type="PathFollow2D" parent="coaster_path"]
position = Vector2(0, -8)
rotation = 0.643501

[node name="track_start" type="Area2D" parent="coaster_path/start"]
rotation = 1.32109
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="coaster_path/start/track_start"]
shape = SubResource("CircleShape2D_oxk6s")

[node name="end" type="PathFollow2D" parent="coaster_path"]
position = Vector2(253.938, 181.793)
rotation = 0.817211
progress = 842.359

[node name="track_end" type="Area2D" parent="coaster_path/end"]
rotation = 1.32109
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="coaster_path/end/track_end"]
shape = SubResource("CircleShape2D_oxk6s")

[node name="TrackArt" parent="." node_paths=PackedStringArray("left_beam_marker", "right_beam_marker") instance=ExtResource("2_viluo")]
unique_name_in_owner = true
offset_top = -299.0
offset_right = 256.0
offset_bottom = 172.0
left_beam_marker = NodePath("../coaster_path/start")
right_beam_marker = NodePath("../coaster_path/end")
style_box_mask = ExtResource("3_7ui7i")
track_path_art_behind_texture = ExtResource("3_flma3")

[connection signal="button_down" from="grab_detect" to="." method="_on_grab_detect_button_down"]
[connection signal="button_up" from="grab_detect" to="." method="_on_grab_detect_button_up"]
[connection signal="area_entered" from="coaster_path/end/track_end" to="." method="_on_track_end_area_entered"]
[connection signal="area_exited" from="coaster_path/end/track_end" to="." method="_on_track_end_area_exited"]
